--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/ProjectSEM2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqljdbc42.jar=C:\\Users\\ADMIN\\Downloads\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=C:\\Users\\Admin\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.sqljdbc42.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
